--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
-/out/build/x64-Debug
 /.vs
 /.idea
+qtcsettings.cmake
+.cmake
+out/
