--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "files.associations": {
-        "exception": "cpp",
-        "chrono": "cpp",
-        "fstream": "cpp"
+        "sstream": "cpp",
+        "iostream": "cpp",
+        "ostream": "cpp",
+        "iosfwd": "cpp",
+        "fstream": "cpp",
+        "__locale": "cpp",
+        "locale": "cpp"
     }
 }
