--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.21)
 
 project(NanoDegree VERSION 1.0)
 
+# set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
+# set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED 20)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED 20)
 
@@ -20,6 +22,3 @@ add_executable(${PROJECT_NAME}
     "include/DoubleDispatch.h")
 
 target_include_directories(${PROJECT_NAME} PUBLIC $INCLUDE_DIRS)
-
-
-set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/out/build")
